Started making Arena manager GUI & world and basic WorldEdit Schematic placement

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,9 @@ commands:
     description: "Setup for Duelity"
   "#kits":
     description: "Manage kits for Duelity"
+  "#arenas":
+    description: "Manage arenas for Duelity"
+  "#wetest":
 permissions:
   duelity.admin:
     default: op
